objects/JunoDoc__Junodoc_Page_Tab__c/JunoDoc__Junodoc_Page_Tab__c.object-meta.xml
<CustomObject>
    <label>Junodoc Page Tab</label>
    <nameField>
        <label>Page Tab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junodoc Page Tabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>