objects/JunoDoc__Junodoc_Page_Tab__c/fields/JunoDoc__Linked_To__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Linked_To__c</fullName>
    <label>Linked To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>