objects/JunoDoc__Junodoc_Page_Tab__c/fields/JunoDoc__Pos_Left__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Pos_Left__c</fullName>
    <label>Pos Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>