objects/JunoDoc__Junodoc_Page_Tab__c/fields/JunoDoc__Pos_Top__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Pos_Top__c</fullName>
    <label>Pos Top</label>
    <length>255</length>
    <type>Text</type>
</CustomField>