objects/JunoDoc__Junodoc_Page_Tab__c/fields/JunoDoc__Recipient_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Recipient_Sort_Order__c</fullName>
    <label>Recipient Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>