objects/JunoDoc__Junodoc_Page_Tab__c/fields/JunoDoc__Sign_Completed__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Sign_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign Completed</label>
    <type>Checkbox</type>
</CustomField>