objects/JunoDoc__Junodoc_Page_Tab__c/fields/JunoDoc__Type__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>